# Imagine_Demo

./: .gitignore  .gitmodules  Makefile  README.md
mit6824_lab1/: CMakeLists.txt  Makefile  a.out  init_bak.py  temp.cpp  test.sh
mit6824_lab1/config/: generate_Log_profile.yaml  mapper_profile.yaml  master_profile.yaml  reducer1_profile.yaml  reducer2_profile.yaml  reducer3_profile.yaml  reducer4_profile.yaml  reducer5_profile.yaml  reducer_profile.yaml  zookeeper_profile.yaml
mit6824_lab1/log/: zookeeper.log.2023-10-30.9:29:51:8365
mit6824_lab1/src/: RpcZooKeeperMain.cpp  mapper.cpp  master.cpp  reducer.cpp
mit6824_lab1/test/: test.sh  testfile.txt
